tests/locals/locals.exp
Error -------------------------------------------------------------- lex.js:11:4

Cannot cast `b` to string because number is incompatible with string.


Error -------------------------------------------------------------- lex.js:26:4

Cannot cast `b` to string because number is incompatible with string.


Error -------------------------------------------------------------- lex.js:37:4

Cannot cast `b` to string because number is incompatible with string.


Error -------------------------------------------------------------- lex.js:48:4

Cannot cast `b` to number because string is incompatible with number.


Error -------------------------------------------------------------- lex.js:59:4

Cannot cast `b` to string because number is incompatible with string.


Error ----------------------------------------------------------- locals.js:1:16

Cannot assign `0` to `x` because number is incompatible with string.


Error ------------------------------------------------------------ locals.js:2:7

number is incompatible with string.


Error ----------------------------------------------------------- locals.js:2:16

Cannot assign `1` to `x` because number is incompatible with string.


Error: locals.js:12
 12:         var x: bool = true;
                    ^^^^ boolean. This type is incompatible with
 10:         var x: number | string = 1337;
                    ^^^^^^^^^^^^^^^ union: number | string
  Member 1:
   10:         var x: number | string = 1337;
                      ^^^^^^ number
  Error:
   12:         var x: bool = true;
                      ^^^^ boolean. This type is incompatible with
   10:         var x: number | string = 1337;
                      ^^^^^^ number
  Member 2:
   10:         var x: number | string = 1337;
                               ^^^^^^ string
  Error:
   12:         var x: bool = true;
                      ^^^^ boolean. This type is incompatible with
   10:         var x: number | string = 1337;
                               ^^^^^^ string

Error ---------------------------------------------------------- locals.js:12:16

boolean is incompatible with number.


Error ---------------------------------------------------------- locals.js:12:16

boolean is incompatible with string.


Error: locals.js:12
 12:         var x: bool = true;
                           ^^^^ boolean. This type is incompatible with
 10:         var x: number | string = 1337;
                    ^^^^^^^^^^^^^^^ union: number | string
  Member 1:
   10:         var x: number | string = 1337;
                      ^^^^^^ number
  Error:
   12:         var x: bool = true;
                             ^^^^ boolean. This type is incompatible with
   10:         var x: number | string = 1337;
                      ^^^^^^ number
  Member 2:
   10:         var x: number | string = 1337;
                               ^^^^^^ string
  Error:
   12:         var x: bool = true;
                             ^^^^ boolean. This type is incompatible with
   10:         var x: number | string = 1337;
                               ^^^^^^ string

Error ----------------------------------------------------------- locals.js:14:9

Cannot call `foo` with `x` bound to `p` because number is incompatible with
boolean.


Error ----------------------------------------------------------- locals.js:14:9

Cannot call `foo` with `x` bound to `p` because string is incompatible with
boolean.


Error ---------------------------------------------------------- locals.js:22:10

Cannot return `x` because string is incompatible with number.



Found 15 errors
